# tradepilot

./: .gitignore  Procfile  README.md  main.py  pyproject.toml  railway.toml  requirements.txt
frontend/: index.html
frontend-react/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend-react/src/: App.jsx  api.js  index.css
frontend-react/src/api/: auth.js  client.js  history.js  market.js  position.js  settings.js  signals.js  sse.js
tests/: test_api_guards.py  test_engine10_trailing.py  test_engine25_adversarial.py  test_engine26_payload.py  test_engine7_boundaries.py  test_unproven_floor.py
tradepilot/: __init__.py  api.py  auth.py  backup.py  config.py  database.py  logging_config.py  orchestrator.py  scheduler.py  settings.py
tradepilot/layer1/: __init__.py  angel_provider.py  base.py  hybrid_provider.py  nifty_universe.py  yahoo_provider.py
tradepilot/layer2/: __init__.py  engine10_exit.py  engine11_risk.py  engine12_learning.py  engine13_events.py  engine14_opportunity_cost.py  engine15_calibration.py  engine16_reeval.py  engine17_regime.py  engine18_coach.py  engine19_strategy_selection.py  engine1_data.py  engine20_self_audit.py  engine21_growth.py  engine22_rejections.py  engine23_archive.py  engine24_reality.py  engine25_intake.py  engine26_brief.py  engine27_news.py  engine2_fii_dii.py  engine3_breadth.py  engine4_discovery.py  engine5_entry.py  engine6_allocation.py  engine7_simulator.py  engine8_charges.py  engine9_position.py  engine_ai.py  prompts.py
tradepilot/layer3/: __init__.py  tracker.py
(+97 files in other folders)
