[project]
name = "tradepilot"
version = "1.0.0"
description = "AI Trading Co-Pilot — Manual Execution, Zero Broker Integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "apscheduler==3.10.4",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "aiohttp==3.9.5",
    "aiosqlite==0.20.0",
    "yfinance>=1.4",
    "ta==0.11.0",
    "pydantic==2.7.4",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "beautifulsoup4==4.12.3",
    "thefuzz==0.22.1",
    "websockets>=13.0",
    "smartapi-python>=1.3.0",
    "pyotp>=2.9.0",
    "logzero>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "pytest-asyncio==0.23.7", "httpx==0.27.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["tradepilot*"]
